Deploying the CEED website with MkDocs

--- a/ceed7am/index.html
+++ b/ceed7am/index.html
@@ -439,15 +439,15 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>1:30-2:00</td>
-<td><strong>Conjectures in economics for fluids and structures</strong> <br> Jed Brown (Boulder) <br> <em>Data structures and algorithms have changed the relative costs, but few production pipelines have internalized the new economics of simulation. Meanwhile, there is frequent dispute among practitioners of when to apply linearizations and assumptions on physical regime, when to use structured vs unstructured grids, and many other important design choices in a simulation tool. We reflect on the computational cost, robustness, and user interface consequences of "simplifying" this decision landscape by embracing fully nonlinear formulations with unstructured meshes.</em></td>
+<td><strong>ExaSMR update: Exascale Multiphysics Reactor Simulations</strong> <br> Elia Merzari (Penn State) <br> <em>ExaSMR integrates reliable numerical methods for modeling reactors using Monte Carlo transport for neutron flux distribution (OpenMC) and high-resolution computational fluid dynamics (NekRS) for thermal fluid heat transfer. It aims to run efficiently on exascale systems, benefiting nuclear vendors and the broader nuclear community by generating detailed virtual datasets. The exascale challenge problem involves predicting reactor conditions for a small modular reactor. This talk will discuss recent Multiphysics simulations that achieved and surpassed the ECP targets. We will also discuss how these simulations are expected to impact the field of nuclear engineering and provide future perspectives.</em></td>
 </tr>
 <tr>
 <td>2:00-2:30</td>
-<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stanimire Tomov + Natalie Beams (UTK) <br> <em>TDB</em></td>
+<td><strong>Conjectures in economics for fluids and structures</strong> <br> Jed Brown (Boulder) <br> <em>Data structures and algorithms have changed the relative costs, but few production pipelines have internalized the new economics of simulation. Meanwhile, there is frequent dispute among practitioners of when to apply linearizations and assumptions on physical regime, when to use structured vs unstructured grids, and many other important design choices in a simulation tool. We reflect on the computational cost, robustness, and user interface consequences of "simplifying" this decision landscape by embracing fully nonlinear formulations with unstructured meshes.</em></td>
 </tr>
 <tr>
 <td>2:30-3:00</td>
-<td><strong>Meshing and Mesh Adaptation of RF Simulations of Tokamak Systems</strong> <br> Mark Shephard and Cameron Smith (RPI) <br> <em>TDB</em></td>
+<td><strong>An Exascale workflow to connect variations in additive manufacturing process-aware built microstructures to variations in part scale properties</strong> <br> Robert Carson (LLNL) <br> <em>Additively manufactured (AM) metals produce complex grain morphologies that differ drastically from grain morphologies found in traditional manufacturing techniques. In term, the mechanical response can also vary quite a bit from traditional techniques and also from other AM builds due to varying processing conditions. The ExaAM project is developing a number of high-fidelity simulation capabilities and workflows that goes from the melt pool physics all the way up to part scale response. The aim of the ExaAM project is to provide predictive simulation results that can guide the AM design process and help accelerate part qualifications. Within this study, we will examine the workflows necessary to connect process-aware built microstructures to macroscopic yield surfaces used in part scale simulations using ExaConstit. Results from this study will be examined using simulations of the NIST IN625 AMB2018-01 part build and will utilize the new exascale computer, Frontier, located at ORNL.</em></td>
 </tr>
 <tr>
 <td>3:00-3:30</td>
@@ -459,11 +459,11 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>4:00-4:30</td>
-<td><strong>An Exascale workflow to connect variations in additive manufacturing process-aware built microstructures to variations in part scale properties</strong> <br> Robert Carson (LLNL) <br> <em>Additively manufactured (AM) metals produce complex grain morphologies that differ drastically from grain morphologies found in traditional manufacturing techniques. In term, the mechanical response can also vary quite a bit from traditional techniques and also from other AM builds due to varying processing conditions. The ExaAM project is developing a number of high-fidelity simulation capabilities and workflows that goes from the melt pool physics all the way up to part scale response. The aim of the ExaAM project is to provide predictive simulation results that can guide the AM design process and help accelerate part qualifications. Within this study, we will examine the workflows necessary to connect process-aware built microstructures to macroscopic yield surfaces used in part scale simulations using ExaConstit. Results from this study will be examined using simulations of the NIST IN625 AMB2018-01 part build and will utilize the new exascale computer, Frontier, located at ORNL.</em></td>
+<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stanimire Tomov + Natalie Beams (UTK) <br> <em>TDB</em></td>
 </tr>
 <tr>
 <td>4:30-5:00</td>
-<td><strong>Direct Numerical Simulation of High-Re Separated Flows with NekRS</strong> <br> Ramesh Balakrishnan (ANL) <br> <em>We present results from direct numerical simulation (DNS) of separated turbulent flow over the periodic hill geometry, the converging-diverging channel, and the Boeing Speed Bump at Reynolds number, Re_h = 37,000, Re_h = 20,580, and Re_L = 2x10^6, respectively. The incompressible Navier-Stokes equations were evolved using the high-order, spectral element code, NekRS, on Summit and Polaris. Time advancement was carried out via third-order BDF/extrapolation, with explicit treatment of the nonlinear term and independent system solves for the viscous and pressure updates. The DNS mean velocity profiles, velocity correlations, and the locations of the separation/reattachment points, compare well with the available data. This talk will also present details of the scaling and performance of NekRS for the cases considered, the preconditioning strategies, and the inflow turbulence generation for the Boeing Speed Bump case which is not periodic in the streamwise direction.</em></td>
+<td><strong>Meshing and Mesh Adaptation of RF Simulations of Tokamak Systems</strong> <br> Mark Shephard and Cameron Smith (RPI) <br> <em>TDB</em></td>
 </tr>
 <tr>
 <td>5:00</td>
@@ -506,18 +506,26 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>11:00-11:30</td>
-<td><strong>GPU-capable sparse direct solvers</strong> <br> Pieter Ghysels (LBNL) <br> <em>TBD</em></td>
+<td><strong>Recent Development in PETSc GPU Support</strong> <br> Jacob Faibussowitsch and Junchao Zhang (ANL) <br> <em>We will talk new features we recently added in PETSc to better support GPUs.</em></td>
 </tr>
 <tr>
 <td>11:30-12:00</td>
-<td><strong>Hybrid <em>p</em>-multigrid and low-order refined preconditioners for the high-order Poisson equation</strong> <br> Malachi Phillips (UIUC) <br> <em>The solution to the Poisson equation arising from the spectral element discretization of the incompressible Navier-Stokes equation requires robust preconditioning strategies.Low-order refined preconditioners, however, provide preconditioners with constant, bounded condition numbers.We propose a hybrid <em>p</em>-multigrid and low-order refined preconditioner that improve the time-to-solution by as much as 86% compared to the low-order preconditioner. We demonstrate the effectiveness of this approach on a variety of problems arising from the spectral element discretization of the incompressible Navier-Stokes equations on GPU architectures spanning to P &gt; 1024 NVIDIA V100 GPUs on Summit.</em></td>
+<td><strong>GPU-capable sparse direct solvers</strong> <br> Pieter Ghysels (LBNL) <br> <em>We present recent progress in porting the sparse direct solver STRUMPACK to the modern GPU architectures found at today's leadership compute facilities, f.i., OLCF's Frontier and NERSC's Perlmutter. STRUMPACK also provides several preconditioners, based on sparse multifrontal factorization with rank-structured approximations of the frontal matrices, the dense sub-blocks in the sparse triangular factors. We present multi-GPU acceleration of the block low rank preconditioner, and show near-linear complexity of the hierarchically off-diagonal butterfly compression-based preconditioner for several PDE's including high frequency Helmholtz and a singularly perturbed reaction diffusion problem.</em></td>
 </tr>
 <tr>
 <td>12:00-1:00</td>
 <td><strong>Lunch Break</strong></td>
 </tr>
 <tr>
-<td>1:00-3:00</td>
+<td>1:00-1:30</td>
+<td><strong>Matrix-free preconditioners for high-order H(div) discretizations</strong> <br> Will Pazner (Portland State) <br> <em>Many problems of physical relevance are posed in the Sobolev space H(div), including porous media flow, radiation diffusion, and magnetohydrodynamics. The iterative solution of the large linear systems that result from high-order finite element discretizations of problems in H(div) remains challenging. In this talk, I will describe the construction of "matrix-free" solvers for high-order grad-div and Darcy problems in H(div). These solvers are designed to work on meshes of high-order tensor-product elements (quadrilaterals and hexahedra), and make use of properties of one-dimensional interpolation and histopolation operators. We will show that the condition number of the preconditioned system is bounded independent of polynomial degree and mesh size, and so the number of iterations is asymptotically O(1), resulting in a solver with quasi-optimal computational complexity. High-performance and GPU-accelerated implementations will be discussed.</em></td>
+</tr>
+<tr>
+<td>1:30-2:00</td>
+<td><strong>Multiplicative Smoothers for Multi-Level Solvers: the quadratic eigenvalue problem for ORAS</strong> <br> Stephen Thomas (AMD) <br> <em>We have re-formulated the Gram-Schmidt and GMRES algorithms -- thereby greatly enhancing the strong scaling properties - and we extended and proved new backward error results - by introducing the IGS-GMRES variant and now MGS-CGS GMRES. Based on these ideas we have introduced composite smoothers (L1-Jacobi +Gauss-Seidel) for algebraic multigrid and optimized Schwarz - which lead to 3x faster solve times on GPU architectures . The Gershgorin circle theorem shows how these improve with the problem size. With Erika Strakova in Ostrava - we are finally making progress on optimized RAS by extending the work of St-Cyr, Gander and Thomas (2007) to irregular domains, and this channels Barry Smith et al (1996), by applying variational techniques to the FEM boundary conditions in integral form and solves the quadratic eigenvalue problem for the optimal transmission conditions. Numerical experiments confirm the decrease in the number of GMRES iterations.</em></td>
+</tr>
+<tr>
+<td>2:00-3:00</td>
 <td><strong>Technical Discussions</strong> <br> <em>Breakouts + Tutorials</em></td>
 </tr>
 <tr>
@@ -526,15 +534,15 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>3:30-4:00</td>
-<td><strong>TBD</strong> <br> Will Pazner (Portland State) <br> <em>TBD</em></td>
+<td><strong>Hybrid <em>p</em>-multigrid and low-order refined preconditioners for the high-order Poisson equation</strong> <br> Malachi Phillips (UIUC) <br> <em>The solution to the Poisson equation arising from the spectral element discretization of the incompressible Navier-Stokes equation requires robust preconditioning strategies.Low-order refined preconditioners, however, provide preconditioners with constant, bounded condition numbers.We propose a hybrid <em>p</em>-multigrid and low-order refined preconditioner that improve the time-to-solution by as much as 86% compared to the low-order preconditioner. We demonstrate the effectiveness of this approach on a variety of problems arising from the spectral element discretization of the incompressible Navier-Stokes equations on GPU architectures spanning to P &gt; 1024 NVIDIA V100 GPUs on Summit.</em></td>
 </tr>
 <tr>
 <td>4:00-4:30</td>
-<td><strong>Recent Development in PETSc GPU Support</strong> <br> Jacob Faibussowitsch and Junchao Zhang (ANL) <br> <em>We will talk new features we recently added in PETSc to better support GPUs.</em></td>
+<td><strong>MPICH for low latency communication on exascale systems</strong> <br> Thomas Gillis <br> <em>TBD</em></td>
 </tr>
 <tr>
 <td>4:30-5:00</td>
-<td><strong>Multiplicative Smoothers for Multi-Level Solvers: the quadratic eigenvalue problem for ORAS</strong> <br> Stephen Thomas (AMD) <br> <em>We have re-formulated the Gram-Schmidt and GMRES algorithms -- thereby greatly enhancing the strong scaling properties - and we extended and proved new backward error results - by introducing the IGS-GMRES variant and now MGS-CGS GMRES. Based on these ideas we have introduced composite smoothers (L1-Jacobi +Gauss-Seidel) for algebraic multigrid and optimized Schwarz - which lead to 3x faster solve times on GPU architectures . The Gershgorin circle theorem shows how these improve with the problem size. With Erika Strakova in Ostrava - we are finally making progress on optimized RAS by extending the work of St-Cyr, Gander and Thomas (2007) to irregular domains, and this channels Barry Smith et al (1996), by applying variational techniques to the FEM boundary conditions in integral form and solves the quadratic eigenvalue problem for the optimal transmission conditions. Numerical experiments confirm the decrease in the number of GMRES iterations.</em></td>
+<td><strong>Direct Numerical Simulation of High-Re Separated Flows with NekRS</strong> <br> Ramesh Balakrishnan (ANL) <br> <em>We present results from direct numerical simulation (DNS) of separated turbulent flow over the periodic hill geometry, the converging-diverging channel, and the Boeing Speed Bump at Reynolds number, Re_h = 37,000, Re_h = 20,580, and Re_L = 2x10^6, respectively. The incompressible Navier-Stokes equations were evolved using the high-order, spectral element code, NekRS, on Summit and Polaris. Time advancement was carried out via third-order BDF/extrapolation, with explicit treatment of the nonlinear term and independent system solves for the viscous and pressure updates. The DNS mean velocity profiles, velocity correlations, and the locations of the separation/reattachment points, compare well with the available data. This talk will also present details of the scaling and performance of NekRS for the cases considered, the preconditioning strategies, and the inflow turbulence generation for the Boeing Speed Bump case which is not periodic in the streamwise direction.</em></td>
 </tr>
 <tr>
 <td>5:00</td>
@@ -552,7 +560,7 @@ technology, and other interested projects.</p>
 </thead>
 <tbody>
 <tr>
-<td>8:30-9:00</td>
+<td>8:00-9:00</td>
 <td><strong>Registration</strong> <br></td>
 </tr>
 <tr>
@@ -561,7 +569,7 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>9:30-10:00</td>
-<td><strong>TBD</strong> <br> TBD</td>
+<td><strong>Performant Low-order Matrix-free Finite Element Kernels on GPU Architectures</strong> <br> Yohann Dudouit (LLNL) <br> <em>Numerical methods such as the Finite Element Method (FEM) have been successfully adapted to utilize the computational power of GPU accelerators. However, much of the effort around applying FEM to GPUs has been focused on high-order FEM due to higher arithmetic intensity and order of accuracy. For applications such as the simulation of geologic reservoirs, high levels of heterogeneity results in high resolution grids characterized by highly discontinuous (cell-wise) material property fields, and low-order methods are typically employed. In this study, we present a strategy for implementing highly performant low-order matrix-free FEM operator kernels in the context of the conjugate gradient (CG) method. Performance results of matrix-free Laplace and isotropic elasticity operator kernels are presented and are shown to compare favorably to matrix-based SpMV operators on V100, A100, and MI250X GPUs.</em></td>
 </tr>
 <tr>
 <td>10:00-10:30</td>
@@ -569,7 +577,7 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>10:30-11:00</td>
-<td><strong>TBD</strong> <br> Kenneth Weiss (LLNL)</td>
+<td><strong>Ascent: Update</strong> <br> Nicole Marsaglia (LLNL) <br> <em>TBD</em></td>
 </tr>
 <tr>
 <td>11:00-11:30</td>
@@ -577,7 +585,7 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>11:30-12:00</td>
-<td><strong>Performant Low-order Matrix-free Finite Element Kernels on GPU Architectures</strong> <br> Yohann Dudouit (LLNL) <br> <em>Numerical methods such as the Finite Element Method (FEM) have been successfully adapted to utilize the computational power of GPU accelerators. However, much of the effort around applying FEM to GPUs has been focused on high-order FEM due to higher arithmetic intensity and order of accuracy. For applications such as the simulation of geologic reservoirs, high levels of heterogeneity results in high resolution grids characterized by highly discontinuous (cell-wise) material property fields, and low-order methods are typically employed. In this study, we present a strategy for implementing highly performant low-order matrix-free FEM operator kernels in the context of the conjugate gradient (CG) method. Performance results of matrix-free Laplace and isotropic elasticity operator kernels are presented and are shown to compare favorably to matrix-based SpMV operators on V100, A100, and MI250X GPUs.</em></td>
+<td><strong>A geometry-based approach to initializing high order volume fractions in multimaterial simulations</strong> <br> Kenneth Weiss (LLNL) <br> <em>Geometric setup for multimaterial simulations can be error prone and time consuming. While we would ideally like to conformally mesh the shapes for all materials, this is often infeasible or impractical. In this talk, we discuss workflows for describing and initializing high order volume fractions for materials with curved interfaces using Axom's Klee and Quest components.</em></td>
 </tr>
 <tr>
 <td>12:00</td>
