Deploying the CEED website with MkDocs

--- a/ceed7am/index.html
+++ b/ceed7am/index.html
@@ -577,7 +577,7 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>10:30-11:00</td>
-<td><strong>Ascent: Update</strong> <br> Nicole Marsaglia (LLNL) <br> <em>TBD</em></td>
+<td><strong>Ascent: Update</strong> <br> Nicole Marsaglia (LLNL) <br> <em>This presentation will focus on updates related to the flyweight in situ analysis and visualization infrastructure, Ascent. Topics include new capabilities to support HPC simulation codes, merging co-developed codes into Ascent to simplify development, necessary updates for executing on Frontier, as well as a look towards what is next.</em></td>
 </tr>
 <tr>
 <td>11:00-11:30</td>
