Deploying the CEED website with MkDocs

--- a/ceed7am/index.html
+++ b/ceed7am/index.html
@@ -406,12 +406,16 @@ technology, and other interested projects.</p>
 <td><strong>Registration</strong> <br></td>
 </tr>
 <tr>
-<td>9:00-9:15</td>
-<td><strong>Opening</strong> <br> Lori Diachin (ECP Director)</td>
+<td>9:00-9:05</td>
+<td><strong>Opening</strong> <br> Tim Germann (ECP Co-Design Lead)</td>
 </tr>
 <tr>
-<td>9:15-10:00</td>
+<td>9:05-9:30</td>
 <td><strong>Welcome &amp; CEED Overview</strong> <br> Tzanio Kolev (LLNL)</td>
+</tr>
+<tr>
+<td>9:30-10:00</td>
+<td><strong>Exascale: A user's perspective</strong> <br> Paul Fischer (UIUC) <br> <em>We will present user experiences on peta and exascale platforms.</em></td>
 </tr>
 <tr>
 <td>10:00-10:30</td>
@@ -423,11 +427,11 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>11:00-11:30</td>
-<td><strong>Exascale: A user's perspective</strong> <br> Paul Fischer (UIUC) <br> <em>We will present user experiences on peta and exascale platforms.</em></td>
+<td><strong>Finite Element Thrust &amp; MFEM Update</strong> <br> Veselin Dobrev (LLNL) <br> <em>This talk will provide a summary of the Finite Element thrust activities during the last year of the CEED project with a main focus on new developments in the MFEM software library.</em></td>
 </tr>
 <tr>
 <td>11:30-12:00</td>
-<td><strong>Finite Element Thrust &amp; MFEM Update</strong> <br> Veselin Dobrev (LLNL) <br> <em>This talk will provide a summary of the Finite Element thrust activities during the last year of the CEED project with a main focus on new developments in the MFEM software library.</em></td>
+<td><strong>Applications Thrust &amp; Nek Update</strong> <br> Misun Min (ANL) <br> <em>We will present challenging application problems and recent advances in performance and optimization on exascale architectures.</em></td>
 </tr>
 <tr>
 <td>12:00-1:00</td>
@@ -435,7 +439,7 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>1:00-1:30</td>
-<td><strong>Applications Thrust &amp; Nek Update</strong> <br> Misun Min (ANL) <br> <em>TDB</em></td>
+<td><strong>How numerical simulations helped to achieve breakeven in ICF implosions on the National Ignition Facility</strong> <br> Marty Marinak (LLNL) <br> <em>The inertial confinement fusion (ICF) program relies upon detailed simulations with radiation hydrodynamic codes to design targets and to interpret the experimental results. The simulations treat as much physics from essential principles as is practical, including laser deposition, cross beam energy transfer, x-ray production and transport, NLTE kinetics, thermal transport, hydrodynamic instabilities, thermonuclear burn, and transport of reaction products. These simulations were used to optimize the target designs, making use of increased laser energy, to give them greater robustness. Preshot predictions of the first experiment that surpassed breakeven yielded thermonuclear burn conditions matched the experimental results reasonably well, with a target gain of ~1.5. We will cover the key developments in radiation hydrodynamic codes and modeling methodologies that enabled these simulations.</em></td>
 </tr>
 <tr>
 <td>1:30-2:00</td>
@@ -443,23 +447,27 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>2:00-2:30</td>
-<td><strong>Conjectures in economics for fluids and structures</strong> <br> Jed Brown (Boulder) <br> <em>Data structures and algorithms have changed the relative costs, but few production pipelines have internalized the new economics of simulation. Meanwhile, there is frequent dispute among practitioners of when to apply linearizations and assumptions on physical regime, when to use structured vs unstructured grids, and many other important design choices in a simulation tool. We reflect on the computational cost, robustness, and user interface consequences of "simplifying" this decision landscape by embracing fully nonlinear formulations with unstructured meshes.</em></td>
-</tr>
-<tr>
-<td>2:30-3:00</td>
 <td><strong>An Exascale workflow to connect variations in additive manufacturing process-aware built microstructures to variations in part scale properties</strong> <br> Robert Carson (LLNL) <br> <em>Additively manufactured (AM) metals produce complex grain morphologies that differ drastically from grain morphologies found in traditional manufacturing techniques. In term, the mechanical response can also vary quite a bit from traditional techniques and also from other AM builds due to varying processing conditions. The ExaAM project is developing a number of high-fidelity simulation capabilities and workflows that goes from the melt pool physics all the way up to part scale response. The aim of the ExaAM project is to provide predictive simulation results that can guide the AM design process and help accelerate part qualifications. Within this study, we will examine the workflows necessary to connect process-aware built microstructures to macroscopic yield surfaces used in part scale simulations using ExaConstit. Results from this study will be examined using simulations of the NIST IN625 AMB2018-01 part build and will utilize the new exascale computer, Frontier, located at ORNL.</em></td>
 </tr>
 <tr>
+<td>2:30-3:00</td>
+<td><strong>Conjectures in economics for fluids and structures</strong> <br> Jed Brown (Boulder) <br> <em>Data structures and algorithms have changed the relative costs, but few production pipelines have internalized the new economics of simulation. Meanwhile, there is frequent dispute among practitioners of when to apply linearizations and assumptions on physical regime, when to use structured vs unstructured grids, and many other important design choices in a simulation tool. We reflect on the computational cost, robustness, and user interface consequences of "simplifying" this decision landscape by embracing fully nonlinear formulations with unstructured meshes.</em></td>
+</tr>
+<tr>
 <td>3:00-3:30</td>
-<td><strong>Coffee Break + Group Photo</strong> <br></td>
+<td><strong>Group Photo + Coffee Break</strong> <br></td>
 </tr>
 <tr>
 <td>3:30-4:00</td>
-<td><strong>How numerical simulations helped to achieve breakeven in ICF implosions on the National Ignition Facility</strong> <br> Marty Marinak (LLNL) <br> <em>The inertial confinement fusion (ICF) program relies upon detailed simulations with radiation hydrodynamic codes to design targets and to interpret the experimental results. The simulations treat as much physics from essential principles as is practical, including laser deposition, cross beam energy transfer, x-ray production and transport, NLTE kinetics, thermal transport, hydrodynamic instabilities, thermonuclear burn, and transport of reaction products. These simulations were used to optimize the target designs, making use of increased laser energy, to give them greater robustness. Preshot predictions of the first experiment that surpassed breakeven yielded thermonuclear burn conditions matched the experimental results reasonably well, with a target gain of ~1.5. We will cover the key developments in radiation hydrodynamic codes and modeling methodologies that enabled these simulations.</em></td>
+<td><strong>Matrix-free preconditioners for high-order H(div) discretizations</strong> <br> Will Pazner (Portland State) <br> <em>Many problems of physical relevance are posed in the Sobolev space H(div), including porous media flow, radiation diffusion, and magnetohydrodynamics. The iterative solution of the large linear systems that result from high-order finite element discretizations of problems in H(div) remains challenging. In this talk, I will describe the construction of "matrix-free" solvers for high-order grad-div and Darcy problems in H(div). These solvers are designed to work on meshes of high-order tensor-product elements (quadrilaterals and hexahedra), and make use of properties of one-dimensional interpolation and histopolation operators. We will show that the condition number of the preconditioned system is bounded independent of polynomial degree and mesh size, and so the number of iterations is asymptotically O(1), resulting in a solver with quasi-optimal computational complexity. High-performance and GPU-accelerated implementations will be discussed.</em></td>
 </tr>
 <tr>
 <td>4:00-4:30</td>
-<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stanimire Tomov + Natalie Beams (UTK) <br> <em>TDB</em></td>
+<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stanimire Tomov and Natalie Beams (UTK) <br> <em>TDB</em></td>
+</tr>
+<tr>
+<td>4:30-5:00</td>
+<td><strong>Tools for MFEM-based, High-order Adaptive Simulations with Application to RF Plasma Heaters in Tokamak Fusion Reactors</strong> <br> Aditya Joshi, Cameron Smith and Mark Shephard (RPI) <br> <em>This presentation will review recent developments of the conforming mesh adaptation procedures available to MFEM users. These developments include progress on supporting GPU based conforming mesh adaptation on the DOE exascale machines and supporting curved mesh adaptation where the mesh entities on curved boundaries can be up to sixth order and interior mesh entities can use up to cubic geometry. The presentation will also overview the use of the developed capabilities in a complete simulation workflow of RF plasma heaters in tokamak fusion reactors. The steps in the simulation workflow include defeaturing of un-needed details from antenna CAD models; combining the antenna, reactor wall and physics components into a single analysis model geometry; applying physical attributes to the analysis model; automatically generating a graded mesh; and executing an MFEM-based adaptive finite element analysis that includes the application of iterations of finite element solve, a posteriori error estimation, and mesh enrichment.</em></td>
 </tr>
 <tr>
 <td>5:00</td>
@@ -514,19 +522,15 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>1:00-1:30</td>
-<td><strong>Matrix-free preconditioners for high-order H(div) discretizations</strong> <br> Will Pazner (Portland State) <br> <em>Many problems of physical relevance are posed in the Sobolev space H(div), including porous media flow, radiation diffusion, and magnetohydrodynamics. The iterative solution of the large linear systems that result from high-order finite element discretizations of problems in H(div) remains challenging. In this talk, I will describe the construction of "matrix-free" solvers for high-order grad-div and Darcy problems in H(div). These solvers are designed to work on meshes of high-order tensor-product elements (quadrilaterals and hexahedra), and make use of properties of one-dimensional interpolation and histopolation operators. We will show that the condition number of the preconditioned system is bounded independent of polynomial degree and mesh size, and so the number of iterations is asymptotically O(1), resulting in a solver with quasi-optimal computational complexity. High-performance and GPU-accelerated implementations will be discussed.</em></td>
+<td><strong>Multiplicative Smoothers for Multi-Level Solvers: the quadratic eigenvalue problem for ORAS</strong> <br> Stephen Thomas (AMD) <br> <em>We have re-formulated the Gram-Schmidt and GMRES algorithms -- thereby greatly enhancing the strong scaling properties - and we extended and proved new backward error results - by introducing the IGS-GMRES variant and now MGS-CGS GMRES. Based on these ideas we have introduced composite smoothers (L1-Jacobi + Gauss-Seidel) for algebraic multigrid and optimized Schwarz - which lead to 3x faster solve times on GPU architectures . The Gershgorin circle theorem shows how these improve with the problem size. With Erika Strakova in Ostrava - we are finally making progress on optimized RAS by extending the work of St-Cyr, Gander and Thomas (2007) to irregular domains, and this channels Barry Smith et al. (1996), by applying variational techniques to the FEM boundary conditions in integral form and solves the quadratic eigenvalue problem for the optimal transmission conditions. Numerical experiments confirm the decrease in the number of GMRES iterations.</em></td>
 </tr>
 <tr>
 <td>1:30-2:00</td>
-<td><strong>Multiplicative Smoothers for Multi-Level Solvers: the quadratic eigenvalue problem for ORAS</strong> <br> Stephen Thomas (AMD) <br> <em>We have re-formulated the Gram-Schmidt and GMRES algorithms -- thereby greatly enhancing the strong scaling properties - and we extended and proved new backward error results - by introducing the IGS-GMRES variant and now MGS-CGS GMRES. Based on these ideas we have introduced composite smoothers (L1-Jacobi +Gauss-Seidel) for algebraic multigrid and optimized Schwarz - which lead to 3x faster solve times on GPU architectures . The Gershgorin circle theorem shows how these improve with the problem size. With Erika Strakova in Ostrava - we are finally making progress on optimized RAS by extending the work of St-Cyr, Gander and Thomas (2007) to irregular domains, and this channels Barry Smith et al. (1996), by applying variational techniques to the FEM boundary conditions in integral form and solves the quadratic eigenvalue problem for the optimal transmission conditions. Numerical experiments confirm the decrease in the number of GMRES iterations.</em></td>
-</tr>
-<tr>
-<td>2:00-2:30</td>
 <td><strong>GPU-capable sparse direct solvers</strong> <br> Pieter Ghysels (LBNL) <br> <em>We present recent progress in porting the sparse direct solver STRUMPACK to the modern GPU architectures found at today's leadership compute facilities: OLCF's Frontier and NERSC's Perlmutter. STRUMPACK also provides several preconditioners, based on sparse multifrontal factorization with rank-structured approximations of the frontal matrices, the dense sub-blocks in the sparse triangular factors. We present multi-GPU acceleration of the block low rank preconditioner, and show near-linear complexity of the hierarchically off-diagonal butterfly compression-based preconditioner for several PDEs including high frequency Helmholtz and a singularly perturbed reaction diffusion problem.</em></td>
 </tr>
 <tr>
-<td>2:30-3:00</td>
-<td><strong>Hybrid <em>p</em>-multigrid and low-order refined preconditioners for the high-order Poisson equation</strong> <br> Malachi Phillips (UIUC) <br> <em>The solution to the Poisson equation arising from the spectral element discretization of the incompressible Navier-Stokes equation requires robust preconditioning strategies.Low-order refined preconditioners, however, provide preconditioners with constant, bounded condition numbers.We propose a hybrid <em>p</em>-multigrid and low-order refined preconditioner that improve the time-to-solution by as much as 86% compared to the low-order preconditioner. We demonstrate the effectiveness of this approach on a variety of problems arising from the spectral element discretization of the incompressible Navier-Stokes equations on GPU architectures spanning to P &gt; 1024 NVIDIA V100 GPUs on Summit.</em></td>
+<td>2:00-3:00</td>
+<td><strong>Technical Discussions</strong> <br> <em>Group discussion on topics such as: <br> • CPUs vs GPUs, AMD and Intel GPUs, ARM processors <br> • preconditioning, strong scaling, meshing, visualization, etc.</em></td>
 </tr>
 <tr>
 <td>3:00-3:30</td>
@@ -534,7 +538,7 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>3:30-4:00</td>
-<td><strong>Tools for MFEM-based, High-order Adaptive Simulations with Application to RF Plasma Heaters in Tokamak Fusion Reactors</strong> <br> Aditya Joshi, Cameron Smith and Mark Shephard (RPI) <br> <em>This presentation will review recent developments of the conforming mesh adaptation procedures available to MFEM users. These developments include progress on supporting GPU based conforming mesh adaptation on the DOE exascale machines and supporting curved mesh adaptation where the mesh entities on curved boundaries can be up to sixth order and interior mesh entities can use up to cubic geometry. The presentation will also overview the use of the developed capabilities in a complete simulation workflow of RF plasma heaters in tokamak fusion reactors. The steps in the simulation workflow include defeaturing of un-needed details from antenna CAD models; combining the antenna, reactor wall and physics components into a single analysis model geometry; applying physical attributes to the analysis model; automatically generating a graded mesh; and executing an MFEM-based adaptive finite element analysis that includes the application of iterations of finite element solve, a posteriori error estimation, and mesh enrichment.</em></td>
+<td><strong>Hybrid <em>p</em>-multigrid and low-order refined preconditioners for the high-order Poisson equation</strong> <br> Malachi Phillips (UIUC) <br> <em>The solution to the Poisson equation arising from the spectral element discretization of the incompressible Navier-Stokes equation requires robust preconditioning strategies.Low-order refined preconditioners, however, provide preconditioners with constant, bounded condition numbers.We propose a hybrid <em>p</em>-multigrid and low-order refined preconditioner that improve the time-to-solution by as much as 86% compared to the low-order preconditioner. We demonstrate the effectiveness of this approach on a variety of problems arising from the spectral element discretization of the incompressible Navier-Stokes equations on GPU architectures spanning to P &gt; 1024 NVIDIA V100 GPUs on Summit.</em></td>
 </tr>
 <tr>
 <td>4:00-4:30</td>
@@ -577,7 +581,7 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>10:30-11:00</td>
-<td><strong>Ascent: Update</strong> <br> Nicole Marsaglia (LLNL) <br> <em>This presentation will focus on updates related to the flyweight in situ analysis and visualization infrastructure, Ascent. Topics include new capabilities to support HPC simulation codes, merging co-developed codes into Ascent to simplify development, necessary updates for executing on Frontier, as well as a look towards what is next.</em></td>
+<td><strong>Ascent Update</strong> <br> Nicole Marsaglia (LLNL) <br> <em>This presentation will focus on updates related to the flyweight in situ analysis and visualization infrastructure, Ascent. Topics include new capabilities to support HPC simulation codes, merging co-developed codes into Ascent to simplify development, necessary updates for executing on Frontier, as well as a look towards what is next.</em></td>
 </tr>
 <tr>
 <td>11:00-11:30</td>
