--- a/ceed7am/index.html
+++ b/ceed7am/index.html
@@ -459,7 +459,7 @@ technology, and other interested projects.</p>
 </tr>
 <tr>
 <td>3:30-4:00</td>
-<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stanimire Tomov and Natalie Beams (UTK) <br> <em>TDB</em></td>
+<td><strong>Hardware Thrust &amp; MAGMA Update</strong> <br> Stanimire Tomov and Natalie Beams (UTK) <br> <em>In this presentation, we will provide an update on the main tasks and activities of the CEED Hardware thrust, including the latest developments in MAGMA and the MAGMA backend for libCEED. We will discuss optimizing the MAGMA Backend for Frontier/Aurora, with improvements in the batch matrix-vector multiplication kernel and utilizing Tensor Cores/Matrix Cores for enhanced GEMM performance. We will also cover porting the MAGMA Backend to Intel GPUs, mixed-precision optimizations in CEED, mini-application development, integration of MFEM-Ginkgo for distributed solvers, autotuning the MAGMA backend, exploring SYCL backends in libCEED, and ongoing work in porting the entire MAGMA library to SYCL/oneAPI.</em></td>
 </tr>
 <tr>
 <td>4:00-4:30</td>
